# reallm

./: Cargo.toml
src/: db.rs  main.rs
src/subjects/: text-qa.txt
