[package]
name = "reallm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.23.0"
qdrant-client = { version = "1.12.1", features = ["serde", "reqwest", "default"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-macros = { version = "2.4.0" }
serde_json = "1.0.133"

[profile.dev]
lto = true